# k4Reco

./: CMakeLists.txt
data/: CMakeLists.txt
k4Reco/: CMakeLists.txt
k4Reco/BIBUtils/: README.md
k4Reco/BIBUtils/include/: BIBUtilsHelpers.h  CaloConer.h  CaloHitSelector.h  FilterConeHits.h  SplitCollectionByLayer.h  SplitCollectionByPolarAngle.h  TrackHelix.h
k4Reco/BIBUtils/options/: runCaloConer.py  runCaloHitSelector.py  runFilterConeHits.py  runSplitCollectionByLayer.py  runSplitCollectionByPolarAngle.py
k4Reco/BIBUtils/src/: CaloConer.cpp  CaloHitSelector.cpp  FilterConeHits.cpp  SplitCollectionByLayer.cc  SplitCollectionByPolarAngle.cc
k4Reco/CaloDigi/: README.md
k4Reco/CaloDigi/include/: CalorimeterHitType.h  RealisticCaloDigi.h  RealisticCaloDigiScinPpd.h  RealisticCaloDigiSilicon.h  RealisticCaloReco.h  RealisticCaloRecoScinPpd.h  RealisticCaloRecoSilicon.h
k4Reco/CaloDigi/src/: CalorimeterHitType.cc  RealisticCaloDigi.cc  RealisticCaloDigiScinPpd.cc  RealisticCaloDigiSilicon.cc  RealisticCaloReco.cc  RealisticCaloRecoScinPpd.cc  RealisticCaloRecoSilicon.cc
k4Reco/ConformalTracking/src/: GaudiTrkUtils.cpp
k4Reco/DDPlanarDigi/components/: DDPlanarDigi.cpp  DDPlanarDigi.h
k4Reco/FastJet/include/: EClusterMode.h  FastJetAlg.hxx
k4Reco/FastJet/src/: FastJetAlg.cpp
k4Reco/GaudiTrkUtils/include/: GaudiDDKalTest.h  GaudiDDKalTestTrack.h
k4Reco/GaudiTrkUtils/src/: GaudiDDKalTest.cpp  GaudiDDKalTestTrack.cpp
k4Reco/Muons/include/: MuonIdentification.h
k4Reco/Muons/src/: MuonIdentification.cpp
k4Reco/Overlay/components/: OverlayTiming.h  (+2 more)
(+4 files in other folders)
